kubernetes/k3s-01/workloads/paperless/middleware-ipallowlist.yml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: paperless-ipallowlist
  namespace: paperless
spec:
  ipAllowList:
    sourceRange:
      - 172.16.0.2
      - 172.16.0.3
      - 192.168.10.3
      - 192.168.10.4
