kubernetes/k3s-01/workloads/paperless/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless
  namespace: paperless
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paperless
  template:
    metadata:
      labels:
        app: paperless
    spec:
      containers:
        - name: paperless
          image: ghcr.io/paperless-ngx/paperless-ngx:3.3.0@sha256:6b94799bc769a063b3340cc5847402e626d4d91d29a295a8e747f8e9bead4207
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: 1
              memory: 2Gi
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: paperless
              mountPath: /usr/src/paperless/data
              subPath: data/
            - name: paperless
              mountPath: /usr/src/paperless/media
              subPath: media/
            - name: paperless-consume
              mountPath: /usr/src/paperless/consume
      volumes:
        - name: paperless
          persistentVolumeClaim:
            claimName: paperless
        - name: paperless-consume
          persistentVolumeClaim:
            claimName: paperless-consume
