kubernetes/k3s-01/workloads/paperless/ingress-route.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: paperless
  namespace: paperless
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`paperless.47fc5c.com`)
      kind: Rule
      services:
        - name: paperless
          kind: Service
          port: 8000
          scheme: http
          sticky:
            cookie:
              httpOnly: true
              secure: true
              sameSite: none
  tls:
    secretName: paperless-certificate
